JBIDE-13208 - additional changes for mixed areas... rse launch, and new property for server mode details so it can be used by others
Cleanup

further cleanup, remove printstacktrace, fix some small unclear code, etc

makeRelativeTo not always suitable. Must be careful here

Runtime wizard when opened to edit a runtime fails due to NPE

Addition of test suite and small changes to ensure all tests pass